아이콘, 앱 이름 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SeoulBammmProj</string>
+    <string name="app_name">서울의 밤</string>
     <string name="intro1">Intro Page 1</string>
     <string name="intro2">Intro Page 2</string>
     <string name="main_menu">Main Menu</string>
